--- a/src/App/Components/Game/Game.css
+++ b/src/App/Components/Game/Game.css
@@ -7,3 +7,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.game-container .game-separator {
+  width: 65%;
+}
+
+@media screen and (min-width: 768px ){
+  .game-container .game-separator {
+    width: 40%;
+  }
+}
